Ajustes de arquitetura